--- a/travel_planner_backend/requirements.txt
+++ b/travel_planner_backend/requirements.txt
@@ -7,6 +7,7 @@ email_validator==2.2.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
 flake8==7.2.0
+greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
@@ -20,6 +21,7 @@ mccabe==0.7.0
 mdurl==0.1.2
 packaging==24.2
 pluggy==1.5.0
+psycopg[binary]==3.2.6
 pycodestyle==2.13.0
 pydantic==2.11.3
 pydantic_core==2.33.1
@@ -33,6 +35,7 @@ rich==14.0.0
 rich-toolkit==0.14.1
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.37
 starlette==0.46.1
 typer==0.15.2
 typing-inspection==0.4.0
@@ -41,3 +44,8 @@ uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
+"""
+Notes:
+- SQLAlchemy pinned to platform-required version 2.0.37.
+- psycopg[binary] provides the PostgreSQL driver without external build deps.
+"""
